@@ -800,6 +800,10 @@ sub _words_matched
 
 __END__
 
+=pod
+
+=encoding utf8
+
 =head1 BUGS
 
 Please report any bugs or feature requests to
@@ -809,11 +813,15 @@ be notified of progress on your bug as I make changes.
 
 =head1 AUTHOR
 
-Jan Pomikalek, C<< <xpomikal@fi.muni.cz> >>
+Jan Pomikalek, C<< <xpomikal@fi.muni.cz> >>,
+
+Michal Špaček, C<< <skim@cpan.org> >>.
 
 =head1 COPYRIGHT & LICENSE
 
 Copyright 2004 Jan Pomikalek, All Rights Reserved.
+
+Copyright 2009-2014 Michal Špaček, All Rights Reserved.
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself.
@@ -826,3 +834,5 @@ L<Encode>
 =head1 VERSION
 
 1.06
+
+=cut
